k8s/borrow-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow-service
  template:
    metadata:
      labels:
        app: borrow-service
    spec:
      containers:
        - name: borrow-service
          image: 821421640977.dkr.ecr.ap-south-1.amazonaws.com/borrow-service/borrow-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: borrow-service
spec:
  selector:
    app: borrow-service
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
